parser.output
Grammar

    0 $accept: programa $end

    1 programa: PROGRAMA ID '.' INICIO sentencias FIN '.'

    2 sentencias: ε
    3           | sentencias sentencia

    4 sentencia: bucle '.'
    5          | comparar '.'
    6          | asignar '.'
    7          | io '.'
    8          | arit '.'

    9 bucle: MIENTRAS condicion HACER sentencias FINMIENTRAS
   10      | EJECUTA NUM VECES USANDO ID sentencias FIN_EJECUTA
   11      | EJECUTA sentencias FIN_EJECUTA HASTAQUE condicion

   12 comparar: SI condicion ENTONCES sentencias SINO sentencias FINSI
   13         | SI condicion ENTONCES sentencias FINSI

   14 asignar: ID '=' expresion
   15        | CALCULA ID '=' expresion FIN_CALCULA
   16        | CALCULA ID COMO expresion
   17        | MUEVE NUM A ID

   18 arit: SUMA listaValores targetOpt optDando
   19     | RESTA listaValores targetOpt optDando
   20     | MULTIPLICA listaValores targetOpt optDando
   21     | DIVIDE listaValores targetOpt optDando

   22 targetOpt: target
   23          | ε

   24 target: ID
   25       | DE ID
   26       | A ID
   27       | POR ID

   28 optDando: DANDO ID
   29         | ε

   30 listaValores: expresion expresion

   31 io: LEE ID
   32   | MOSTRAR listaExpresiones

   33 listaExpresiones: expresion
   34                 | listaExpresiones ',' expresion

   35 expresion: ID
   36          | NUM
   37          | CAD
   38          | expresion '*' expresion
   39          | expresion '/' expresion
   40          | expresion '+' expresion
   41          | expresion '-' expresion

   42 condicion: expresion ES IGUAL A expresion
   43          | expresion ES MAYOR QUE expresion
   44          | expresion ES MENOR QUE expresion
   45          | expresion '<' expresion
   46          | expresion '>' expresion
   47          | expresion '=' expresion


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 38
    '+' (43) 40
    ',' (44) 34
    '-' (45) 41
    '.' (46) 1 4 5 6 7 8
    '/' (47) 39
    '<' (60) 45
    '=' (61) 14 15 47
    '>' (62) 46
    error (256)
    NUM <num> (258) 10 17 36
    ID <id> (259) 1 10 14 15 16 17 24 25 26 27 28 31 35
    CAD <cad> (260) 37
    PROGRAMA (261) 1
    INICIO (262) 1
    FIN (263) 1
    LEE (264) 31
    MOSTRAR (265) 32
    SI (266) 12 13
    ENTONCES (267) 12 13
    SINO (268) 12
    MIENTRAS (269) 9
    HACER (270) 9
    FINMIENTRAS (271) 9
    EJECUTA (272) 10 11
    VECES (273) 10
    USANDO (274) 10
    FIN_EJECUTA (275) 10 11
    FINSI (276) 12 13
    HASTAQUE (277) 11
    CALCULA (278) 15 16
    FIN_CALCULA (279) 15
    MUEVE (280) 17
    A (281) 17 26 42
    DE (282) 25
    COMO (283) 16
    POR (284) 27
    ES (285) 42 43 44
    IGUAL (286) 42
    MAYOR (287) 43
    MENOR (288) 44
    QUE (289) 43 44
    SUMA (290) 18
    RESTA (291) 19
    MULTIPLICA (292) 20
    DIVIDE (293) 21
    DANDO (294) 28


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    programa (50)
        on left: 1
        on right: 0
    sentencias (51)
        on left: 2 3
        on right: 1 3 9 10 11 12 13
    sentencia (52)
        on left: 4 5 6 7 8
        on right: 3
    bucle (53)
        on left: 9 10 11
        on right: 4
    comparar (54)
        on left: 12 13
        on right: 5
    asignar (55)
        on left: 14 15 16 17
        on right: 6
    arit (56)
        on left: 18 19 20 21
        on right: 8
    targetOpt <id> (57)
        on left: 22 23
        on right: 18 19 20 21
    target <id> (58)
        on left: 24 25 26 27
        on right: 22
    optDando <id> (59)
        on left: 28 29
        on right: 18 19 20 21
    listaValores (60)
        on left: 30
        on right: 18 19 20 21
    io (61)
        on left: 31 32
        on right: 7
    listaExpresiones <num> (62)
        on left: 33 34
        on right: 32 34
    expresion (63)
        on left: 35 36 37 38 39 40 41
        on right: 14 15 16 30 33 34 38 39 40 41 42 43 44 45 46 47
    condicion (64)
        on left: 42 43 44 45 46 47
        on right: 9 11 12 13


State 0

    0 $accept: • programa $end

    PROGRAMA  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: PROGRAMA • ID '.' INICIO sentencias FIN '.'

    ID  shift, and go to state 3


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 4


State 3

    1 programa: PROGRAMA ID • '.' INICIO sentencias FIN '.'

    '.'  shift, and go to state 5


State 4

    0 $accept: programa $end •

    $default  accept


State 5

    1 programa: PROGRAMA ID '.' • INICIO sentencias FIN '.'

    INICIO  shift, and go to state 6


State 6

    1 programa: PROGRAMA ID '.' INICIO • sentencias FIN '.'

    $default  reduce using rule 2 (sentencias)

    sentencias  go to state 7


State 7

    1 programa: PROGRAMA ID '.' INICIO sentencias • FIN '.'
    3 sentencias: sentencias • sentencia

    ID          shift, and go to state 8
    FIN         shift, and go to state 9
    LEE         shift, and go to state 10
    MOSTRAR     shift, and go to state 11
    SI          shift, and go to state 12
    MIENTRAS    shift, and go to state 13
    EJECUTA     shift, and go to state 14
    CALCULA     shift, and go to state 15
    MUEVE       shift, and go to state 16
    SUMA        shift, and go to state 17
    RESTA       shift, and go to state 18
    MULTIPLICA  shift, and go to state 19
    DIVIDE      shift, and go to state 20

    sentencia  go to state 21
    bucle      go to state 22
    comparar   go to state 23
    asignar    go to state 24
    arit       go to state 25
    io         go to state 26


State 8

   14 asignar: ID • '=' expresion

    '='  shift, and go to state 27


State 9

    1 programa: PROGRAMA ID '.' INICIO sentencias FIN • '.'

    '.'  shift, and go to state 28


State 10

   31 io: LEE • ID

    ID  shift, and go to state 29


State 11

   32 io: MOSTRAR • listaExpresiones

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    listaExpresiones  go to state 33
    expresion         go to state 34


State 12

   12 comparar: SI • condicion ENTONCES sentencias SINO sentencias FINSI
   13         | SI • condicion ENTONCES sentencias FINSI

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    expresion  go to state 35
    condicion  go to state 36


State 13

    9 bucle: MIENTRAS • condicion HACER sentencias FINMIENTRAS

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    expresion  go to state 35
    condicion  go to state 37


State 14

   10 bucle: EJECUTA • NUM VECES USANDO ID sentencias FIN_EJECUTA
   11      | EJECUTA • sentencias FIN_EJECUTA HASTAQUE condicion

    NUM  shift, and go to state 38

    $default  reduce using rule 2 (sentencias)

    sentencias  go to state 39


State 15

   15 asignar: CALCULA • ID '=' expresion FIN_CALCULA
   16        | CALCULA • ID COMO expresion

    ID  shift, and go to state 40


State 16

   17 asignar: MUEVE • NUM A ID

    NUM  shift, and go to state 41


State 17

   18 arit: SUMA • listaValores targetOpt optDando

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    listaValores  go to state 42
    expresion     go to state 43


State 18

   19 arit: RESTA • listaValores targetOpt optDando

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    listaValores  go to state 44
    expresion     go to state 43


State 19

   20 arit: MULTIPLICA • listaValores targetOpt optDando

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    listaValores  go to state 45
    expresion     go to state 43


State 20

   21 arit: DIVIDE • listaValores targetOpt optDando

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    listaValores  go to state 46
    expresion     go to state 43


State 21

    3 sentencias: sentencias sentencia •

    $default  reduce using rule 3 (sentencias)


State 22

    4 sentencia: bucle • '.'

    '.'  shift, and go to state 47


State 23

    5 sentencia: comparar • '.'

    '.'  shift, and go to state 48


State 24

    6 sentencia: asignar • '.'

    '.'  shift, and go to state 49


State 25

    8 sentencia: arit • '.'

    '.'  shift, and go to state 50


State 26

    7 sentencia: io • '.'

    '.'  shift, and go to state 51


State 27

   14 asignar: ID '=' • expresion

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    expresion  go to state 52


State 28

    1 programa: PROGRAMA ID '.' INICIO sentencias FIN '.' •

    $default  reduce using rule 1 (programa)


State 29

   31 io: LEE ID •

    $default  reduce using rule 31 (io)


State 30

   36 expresion: NUM •

    $default  reduce using rule 36 (expresion)


State 31

   35 expresion: ID •

    $default  reduce using rule 35 (expresion)


State 32

   37 expresion: CAD •

    $default  reduce using rule 37 (expresion)


State 33

   32 io: MOSTRAR listaExpresiones •
   34 listaExpresiones: listaExpresiones • ',' expresion

    ','  shift, and go to state 53

    $default  reduce using rule 32 (io)


State 34

   33 listaExpresiones: expresion •
   38 expresion: expresion • '*' expresion
   39          | expresion • '/' expresion
   40          | expresion • '+' expresion
   41          | expresion • '-' expresion

    '+'  shift, and go to state 54
    '-'  shift, and go to state 55
    '*'  shift, and go to state 56
    '/'  shift, and go to state 57

    $default  reduce using rule 33 (listaExpresiones)


State 35

   38 expresion: expresion • '*' expresion
   39          | expresion • '/' expresion
   40          | expresion • '+' expresion
   41          | expresion • '-' expresion
   42 condicion: expresion • ES IGUAL A expresion
   43          | expresion • ES MAYOR QUE expresion
   44          | expresion • ES MENOR QUE expresion
   45          | expresion • '<' expresion
   46          | expresion • '>' expresion
   47          | expresion • '=' expresion

    ES   shift, and go to state 58
    '+'  shift, and go to state 54
    '-'  shift, and go to state 55
    '*'  shift, and go to state 56
    '/'  shift, and go to state 57
    '='  shift, and go to state 59
    '<'  shift, and go to state 60
    '>'  shift, and go to state 61


State 36

   12 comparar: SI condicion • ENTONCES sentencias SINO sentencias FINSI
   13         | SI condicion • ENTONCES sentencias FINSI

    ENTONCES  shift, and go to state 62


State 37

    9 bucle: MIENTRAS condicion • HACER sentencias FINMIENTRAS

    HACER  shift, and go to state 63


State 38

   10 bucle: EJECUTA NUM • VECES USANDO ID sentencias FIN_EJECUTA

    VECES  shift, and go to state 64


State 39

    3 sentencias: sentencias • sentencia
   11 bucle: EJECUTA sentencias • FIN_EJECUTA HASTAQUE condicion

    ID           shift, and go to state 8
    LEE          shift, and go to state 10
    MOSTRAR      shift, and go to state 11
    SI           shift, and go to state 12
    MIENTRAS     shift, and go to state 13
    EJECUTA      shift, and go to state 14
    FIN_EJECUTA  shift, and go to state 65
    CALCULA      shift, and go to state 15
    MUEVE        shift, and go to state 16
    SUMA         shift, and go to state 17
    RESTA        shift, and go to state 18
    MULTIPLICA   shift, and go to state 19
    DIVIDE       shift, and go to state 20

    sentencia  go to state 21
    bucle      go to state 22
    comparar   go to state 23
    asignar    go to state 24
    arit       go to state 25
    io         go to state 26


State 40

   15 asignar: CALCULA ID • '=' expresion FIN_CALCULA
   16        | CALCULA ID • COMO expresion

    COMO  shift, and go to state 66
    '='   shift, and go to state 67


State 41

   17 asignar: MUEVE NUM • A ID

    A  shift, and go to state 68


State 42

   18 arit: SUMA listaValores • targetOpt optDando

    ID   shift, and go to state 69
    A    shift, and go to state 70
    DE   shift, and go to state 71
    POR  shift, and go to state 72

    $default  reduce using rule 23 (targetOpt)

    targetOpt  go to state 73
    target     go to state 74


State 43

   30 listaValores: expresion • expresion
   38 expresion: expresion • '*' expresion
   39          | expresion • '/' expresion
   40          | expresion • '+' expresion
   41          | expresion • '-' expresion

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32
    '+'  shift, and go to state 54
    '-'  shift, and go to state 55
    '*'  shift, and go to state 56
    '/'  shift, and go to state 57

    expresion  go to state 75


State 44

   19 arit: RESTA listaValores • targetOpt optDando

    ID   shift, and go to state 69
    A    shift, and go to state 70
    DE   shift, and go to state 71
    POR  shift, and go to state 72

    $default  reduce using rule 23 (targetOpt)

    targetOpt  go to state 76
    target     go to state 74


State 45

   20 arit: MULTIPLICA listaValores • targetOpt optDando

    ID   shift, and go to state 69
    A    shift, and go to state 70
    DE   shift, and go to state 71
    POR  shift, and go to state 72

    $default  reduce using rule 23 (targetOpt)

    targetOpt  go to state 77
    target     go to state 74


State 46

   21 arit: DIVIDE listaValores • targetOpt optDando

    ID   shift, and go to state 69
    A    shift, and go to state 70
    DE   shift, and go to state 71
    POR  shift, and go to state 72

    $default  reduce using rule 23 (targetOpt)

    targetOpt  go to state 78
    target     go to state 74


State 47

    4 sentencia: bucle '.' •

    $default  reduce using rule 4 (sentencia)


State 48

    5 sentencia: comparar '.' •

    $default  reduce using rule 5 (sentencia)


State 49

    6 sentencia: asignar '.' •

    $default  reduce using rule 6 (sentencia)


State 50

    8 sentencia: arit '.' •

    $default  reduce using rule 8 (sentencia)


State 51

    7 sentencia: io '.' •

    $default  reduce using rule 7 (sentencia)


State 52

   14 asignar: ID '=' expresion •
   38 expresion: expresion • '*' expresion
   39          | expresion • '/' expresion
   40          | expresion • '+' expresion
   41          | expresion • '-' expresion

    '+'  shift, and go to state 54
    '-'  shift, and go to state 55
    '*'  shift, and go to state 56
    '/'  shift, and go to state 57

    $default  reduce using rule 14 (asignar)


State 53

   34 listaExpresiones: listaExpresiones ',' • expresion

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    expresion  go to state 79


State 54

   40 expresion: expresion '+' • expresion

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    expresion  go to state 80


State 55

   41 expresion: expresion '-' • expresion

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    expresion  go to state 81


State 56

   38 expresion: expresion '*' • expresion

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    expresion  go to state 82


State 57

   39 expresion: expresion '/' • expresion

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    expresion  go to state 83


State 58

   42 condicion: expresion ES • IGUAL A expresion
   43          | expresion ES • MAYOR QUE expresion
   44          | expresion ES • MENOR QUE expresion

    IGUAL  shift, and go to state 84
    MAYOR  shift, and go to state 85
    MENOR  shift, and go to state 86


State 59

   47 condicion: expresion '=' • expresion

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    expresion  go to state 87


State 60

   45 condicion: expresion '<' • expresion

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    expresion  go to state 88


State 61

   46 condicion: expresion '>' • expresion

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    expresion  go to state 89


State 62

   12 comparar: SI condicion ENTONCES • sentencias SINO sentencias FINSI
   13         | SI condicion ENTONCES • sentencias FINSI

    $default  reduce using rule 2 (sentencias)

    sentencias  go to state 90


State 63

    9 bucle: MIENTRAS condicion HACER • sentencias FINMIENTRAS

    $default  reduce using rule 2 (sentencias)

    sentencias  go to state 91


State 64

   10 bucle: EJECUTA NUM VECES • USANDO ID sentencias FIN_EJECUTA

    USANDO  shift, and go to state 92


State 65

   11 bucle: EJECUTA sentencias FIN_EJECUTA • HASTAQUE condicion

    HASTAQUE  shift, and go to state 93


State 66

   16 asignar: CALCULA ID COMO • expresion

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    expresion  go to state 94


State 67

   15 asignar: CALCULA ID '=' • expresion FIN_CALCULA

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    expresion  go to state 95


State 68

   17 asignar: MUEVE NUM A • ID

    ID  shift, and go to state 96


State 69

   24 target: ID •

    $default  reduce using rule 24 (target)


State 70

   26 target: A • ID

    ID  shift, and go to state 97


State 71

   25 target: DE • ID

    ID  shift, and go to state 98


State 72

   27 target: POR • ID

    ID  shift, and go to state 99


State 73

   18 arit: SUMA listaValores targetOpt • optDando

    DANDO  shift, and go to state 100

    $default  reduce using rule 29 (optDando)

    optDando  go to state 101


State 74

   22 targetOpt: target •

    $default  reduce using rule 22 (targetOpt)


State 75

   30 listaValores: expresion expresion •
   38 expresion: expresion • '*' expresion
   39          | expresion • '/' expresion
   40          | expresion • '+' expresion
   41          | expresion • '-' expresion

    '+'  shift, and go to state 54
    '-'  shift, and go to state 55
    '*'  shift, and go to state 56
    '/'  shift, and go to state 57

    $default  reduce using rule 30 (listaValores)


State 76

   19 arit: RESTA listaValores targetOpt • optDando

    DANDO  shift, and go to state 100

    $default  reduce using rule 29 (optDando)

    optDando  go to state 102


State 77

   20 arit: MULTIPLICA listaValores targetOpt • optDando

    DANDO  shift, and go to state 100

    $default  reduce using rule 29 (optDando)

    optDando  go to state 103


State 78

   21 arit: DIVIDE listaValores targetOpt • optDando

    DANDO  shift, and go to state 100

    $default  reduce using rule 29 (optDando)

    optDando  go to state 104


State 79

   34 listaExpresiones: listaExpresiones ',' expresion •
   38 expresion: expresion • '*' expresion
   39          | expresion • '/' expresion
   40          | expresion • '+' expresion
   41          | expresion • '-' expresion

    '+'  shift, and go to state 54
    '-'  shift, and go to state 55
    '*'  shift, and go to state 56
    '/'  shift, and go to state 57

    $default  reduce using rule 34 (listaExpresiones)


State 80

   38 expresion: expresion • '*' expresion
   39          | expresion • '/' expresion
   40          | expresion • '+' expresion
   40          | expresion '+' expresion •
   41          | expresion • '-' expresion

    '*'  shift, and go to state 56
    '/'  shift, and go to state 57

    $default  reduce using rule 40 (expresion)


State 81

   38 expresion: expresion • '*' expresion
   39          | expresion • '/' expresion
   40          | expresion • '+' expresion
   41          | expresion • '-' expresion
   41          | expresion '-' expresion •

    '*'  shift, and go to state 56
    '/'  shift, and go to state 57

    $default  reduce using rule 41 (expresion)


State 82

   38 expresion: expresion • '*' expresion
   38          | expresion '*' expresion •
   39          | expresion • '/' expresion
   40          | expresion • '+' expresion
   41          | expresion • '-' expresion

    $default  reduce using rule 38 (expresion)


State 83

   38 expresion: expresion • '*' expresion
   39          | expresion • '/' expresion
   39          | expresion '/' expresion •
   40          | expresion • '+' expresion
   41          | expresion • '-' expresion

    $default  reduce using rule 39 (expresion)


State 84

   42 condicion: expresion ES IGUAL • A expresion

    A  shift, and go to state 105


State 85

   43 condicion: expresion ES MAYOR • QUE expresion

    QUE  shift, and go to state 106


State 86

   44 condicion: expresion ES MENOR • QUE expresion

    QUE  shift, and go to state 107


State 87

   38 expresion: expresion • '*' expresion
   39          | expresion • '/' expresion
   40          | expresion • '+' expresion
   41          | expresion • '-' expresion
   47 condicion: expresion '=' expresion •

    '+'  shift, and go to state 54
    '-'  shift, and go to state 55
    '*'  shift, and go to state 56
    '/'  shift, and go to state 57

    $default  reduce using rule 47 (condicion)


State 88

   38 expresion: expresion • '*' expresion
   39          | expresion • '/' expresion
   40          | expresion • '+' expresion
   41          | expresion • '-' expresion
   45 condicion: expresion '<' expresion •

    '+'  shift, and go to state 54
    '-'  shift, and go to state 55
    '*'  shift, and go to state 56
    '/'  shift, and go to state 57

    $default  reduce using rule 45 (condicion)


State 89

   38 expresion: expresion • '*' expresion
   39          | expresion • '/' expresion
   40          | expresion • '+' expresion
   41          | expresion • '-' expresion
   46 condicion: expresion '>' expresion •

    '+'  shift, and go to state 54
    '-'  shift, and go to state 55
    '*'  shift, and go to state 56
    '/'  shift, and go to state 57

    $default  reduce using rule 46 (condicion)


State 90

    3 sentencias: sentencias • sentencia
   12 comparar: SI condicion ENTONCES sentencias • SINO sentencias FINSI
   13         | SI condicion ENTONCES sentencias • FINSI

    ID          shift, and go to state 8
    LEE         shift, and go to state 10
    MOSTRAR     shift, and go to state 11
    SI          shift, and go to state 12
    SINO        shift, and go to state 108
    MIENTRAS    shift, and go to state 13
    EJECUTA     shift, and go to state 14
    FINSI       shift, and go to state 109
    CALCULA     shift, and go to state 15
    MUEVE       shift, and go to state 16
    SUMA        shift, and go to state 17
    RESTA       shift, and go to state 18
    MULTIPLICA  shift, and go to state 19
    DIVIDE      shift, and go to state 20

    sentencia  go to state 21
    bucle      go to state 22
    comparar   go to state 23
    asignar    go to state 24
    arit       go to state 25
    io         go to state 26


State 91

    3 sentencias: sentencias • sentencia
    9 bucle: MIENTRAS condicion HACER sentencias • FINMIENTRAS

    ID           shift, and go to state 8
    LEE          shift, and go to state 10
    MOSTRAR      shift, and go to state 11
    SI           shift, and go to state 12
    MIENTRAS     shift, and go to state 13
    FINMIENTRAS  shift, and go to state 110
    EJECUTA      shift, and go to state 14
    CALCULA      shift, and go to state 15
    MUEVE        shift, and go to state 16
    SUMA         shift, and go to state 17
    RESTA        shift, and go to state 18
    MULTIPLICA   shift, and go to state 19
    DIVIDE       shift, and go to state 20

    sentencia  go to state 21
    bucle      go to state 22
    comparar   go to state 23
    asignar    go to state 24
    arit       go to state 25
    io         go to state 26


State 92

   10 bucle: EJECUTA NUM VECES USANDO • ID sentencias FIN_EJECUTA

    ID  shift, and go to state 111


State 93

   11 bucle: EJECUTA sentencias FIN_EJECUTA HASTAQUE • condicion

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    expresion  go to state 35
    condicion  go to state 112


State 94

   16 asignar: CALCULA ID COMO expresion •
   38 expresion: expresion • '*' expresion
   39          | expresion • '/' expresion
   40          | expresion • '+' expresion
   41          | expresion • '-' expresion

    '+'  shift, and go to state 54
    '-'  shift, and go to state 55
    '*'  shift, and go to state 56
    '/'  shift, and go to state 57

    $default  reduce using rule 16 (asignar)


State 95

   15 asignar: CALCULA ID '=' expresion • FIN_CALCULA
   38 expresion: expresion • '*' expresion
   39          | expresion • '/' expresion
   40          | expresion • '+' expresion
   41          | expresion • '-' expresion

    FIN_CALCULA  shift, and go to state 113
    '+'          shift, and go to state 54
    '-'          shift, and go to state 55
    '*'          shift, and go to state 56
    '/'          shift, and go to state 57


State 96

   17 asignar: MUEVE NUM A ID •

    $default  reduce using rule 17 (asignar)


State 97

   26 target: A ID •

    $default  reduce using rule 26 (target)


State 98

   25 target: DE ID •

    $default  reduce using rule 25 (target)


State 99

   27 target: POR ID •

    $default  reduce using rule 27 (target)


State 100

   28 optDando: DANDO • ID

    ID  shift, and go to state 114


State 101

   18 arit: SUMA listaValores targetOpt optDando •

    $default  reduce using rule 18 (arit)


State 102

   19 arit: RESTA listaValores targetOpt optDando •

    $default  reduce using rule 19 (arit)


State 103

   20 arit: MULTIPLICA listaValores targetOpt optDando •

    $default  reduce using rule 20 (arit)


State 104

   21 arit: DIVIDE listaValores targetOpt optDando •

    $default  reduce using rule 21 (arit)


State 105

   42 condicion: expresion ES IGUAL A • expresion

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    expresion  go to state 115


State 106

   43 condicion: expresion ES MAYOR QUE • expresion

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    expresion  go to state 116


State 107

   44 condicion: expresion ES MENOR QUE • expresion

    NUM  shift, and go to state 30
    ID   shift, and go to state 31
    CAD  shift, and go to state 32

    expresion  go to state 117


State 108

   12 comparar: SI condicion ENTONCES sentencias SINO • sentencias FINSI

    $default  reduce using rule 2 (sentencias)

    sentencias  go to state 118


State 109

   13 comparar: SI condicion ENTONCES sentencias FINSI •

    $default  reduce using rule 13 (comparar)


State 110

    9 bucle: MIENTRAS condicion HACER sentencias FINMIENTRAS •

    $default  reduce using rule 9 (bucle)


State 111

   10 bucle: EJECUTA NUM VECES USANDO ID • sentencias FIN_EJECUTA

    $default  reduce using rule 2 (sentencias)

    sentencias  go to state 119


State 112

   11 bucle: EJECUTA sentencias FIN_EJECUTA HASTAQUE condicion •

    $default  reduce using rule 11 (bucle)


State 113

   15 asignar: CALCULA ID '=' expresion FIN_CALCULA •

    $default  reduce using rule 15 (asignar)


State 114

   28 optDando: DANDO ID •

    $default  reduce using rule 28 (optDando)


State 115

   38 expresion: expresion • '*' expresion
   39          | expresion • '/' expresion
   40          | expresion • '+' expresion
   41          | expresion • '-' expresion
   42 condicion: expresion ES IGUAL A expresion •

    '+'  shift, and go to state 54
    '-'  shift, and go to state 55
    '*'  shift, and go to state 56
    '/'  shift, and go to state 57

    $default  reduce using rule 42 (condicion)


State 116

   38 expresion: expresion • '*' expresion
   39          | expresion • '/' expresion
   40          | expresion • '+' expresion
   41          | expresion • '-' expresion
   43 condicion: expresion ES MAYOR QUE expresion •

    '+'  shift, and go to state 54
    '-'  shift, and go to state 55
    '*'  shift, and go to state 56
    '/'  shift, and go to state 57

    $default  reduce using rule 43 (condicion)


State 117

   38 expresion: expresion • '*' expresion
   39          | expresion • '/' expresion
   40          | expresion • '+' expresion
   41          | expresion • '-' expresion
   44 condicion: expresion ES MENOR QUE expresion •

    '+'  shift, and go to state 54
    '-'  shift, and go to state 55
    '*'  shift, and go to state 56
    '/'  shift, and go to state 57

    $default  reduce using rule 44 (condicion)


State 118

    3 sentencias: sentencias • sentencia
   12 comparar: SI condicion ENTONCES sentencias SINO sentencias • FINSI

    ID          shift, and go to state 8
    LEE         shift, and go to state 10
    MOSTRAR     shift, and go to state 11
    SI          shift, and go to state 12
    MIENTRAS    shift, and go to state 13
    EJECUTA     shift, and go to state 14
    FINSI       shift, and go to state 120
    CALCULA     shift, and go to state 15
    MUEVE       shift, and go to state 16
    SUMA        shift, and go to state 17
    RESTA       shift, and go to state 18
    MULTIPLICA  shift, and go to state 19
    DIVIDE      shift, and go to state 20

    sentencia  go to state 21
    bucle      go to state 22
    comparar   go to state 23
    asignar    go to state 24
    arit       go to state 25
    io         go to state 26


State 119

    3 sentencias: sentencias • sentencia
   10 bucle: EJECUTA NUM VECES USANDO ID sentencias • FIN_EJECUTA

    ID           shift, and go to state 8
    LEE          shift, and go to state 10
    MOSTRAR      shift, and go to state 11
    SI           shift, and go to state 12
    MIENTRAS     shift, and go to state 13
    EJECUTA      shift, and go to state 14
    FIN_EJECUTA  shift, and go to state 121
    CALCULA      shift, and go to state 15
    MUEVE        shift, and go to state 16
    SUMA         shift, and go to state 17
    RESTA        shift, and go to state 18
    MULTIPLICA   shift, and go to state 19
    DIVIDE       shift, and go to state 20

    sentencia  go to state 21
    bucle      go to state 22
    comparar   go to state 23
    asignar    go to state 24
    arit       go to state 25
    io         go to state 26


State 120

   12 comparar: SI condicion ENTONCES sentencias SINO sentencias FINSI •

    $default  reduce using rule 12 (comparar)


State 121

   10 bucle: EJECUTA NUM VECES USANDO ID sentencias FIN_EJECUTA •

    $default  reduce using rule 10 (bucle)
